@@ -105,8 +105,8 @@ proto_cmds = {
                   help='Syntax: NOOP (just do nothing).'),
     'OPTS' : dict(perm=None, auth=True, arg=True,
                   help='Syntax: OPTS <SP> cmd [<SP> option] (set option for command).'),
-    'PASS' : dict(perm=None, auth=False, arg=True,
-                  help='Syntax: PASS <SP> password (set user password).'),
+    'PASS' : dict(perm=None, auth=False, arg=None,
+                  help='Syntax: PASS [<SP> password] (set user password).'),
     'PASV' : dict(perm=None, auth=True, arg=False,
                   help='Syntax: PASV (open passive data connection).'),
     'PORT' : dict(perm=None, auth=True, arg=True,
