@@ -12,6 +12,8 @@ Enhancements:
  * Issue 240: enabled "python -m pyftpdlib" cmdline syntax and got rid of
    "python -m pyftpdlib.tpserver" syntax which was deprecated in 1.0.0.
 
+ * Issue 241: empty passwords are now allowed for anonymous and other users.
+
 Bugfixes:
 
  * Issue 238: username is not logged in case of failed authentication.
